--- a/notebooks/manisfestos class.ipynb
+++ b/notebooks/manisfestos class.ipynb
@@ -426,7 +426,7 @@
       "source": [
         "# Example use\n",
         "\n",
-        "APIKEY = \"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\"\n",
+        "APIKEY = \"[KEY]\"\n",
         "MODEL = 'gpt-3.5-turbo'\n",
         "llm = LLMWrapper(model = MODEL, apikey=APIKEY)\n",
         "\n",
@@ -462,7 +462,7 @@
       "outputs": [],
       "source": [
         "# Party manifesto example \n",
-        "APIKEY = \"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\"\n",
+        "APIKEY = \"[KEY]\"\n",
         "MODEL = 'gpt-3.5-turbo'\n",
         "llm = LLMWrapper(model = MODEL, apikey=APIKEY)\n",
         "\n",
@@ -621,7 +621,7 @@
       ],
       "source": [
         "# Twitter annotation example \n",
-        "APIKEY = \"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\"\n",
+        "APIKEY = \"[KEY]\"\n",
         "MODEL = 'gpt-3.5-turbo'\n",
         "llm = LLMWrapper(model = MODEL, apikey=APIKEY)\n",
         "\n",
