--- a/notebooks/manisfestos class.ipynb
+++ b/notebooks/manisfestos class.ipynb
@@ -446,7 +446,7 @@
       "source": [
         "# Example use\n",
         "\n",
-        "APIKEY = \"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\"\n",
+        "APIKEY = \"[KEY]\"\n",
         "MODEL = 'gpt-3.5-turbo'\n",
         "llm = LLMWrapper(model = MODEL, apikey=APIKEY)\n",
         "\n",
