--- a/notebooks/manisfestos class.ipynb
+++ b/notebooks/manisfestos class.ipynb
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 2,
       "id": "5064760f-ec00-4cae-b4cd-566d48df5ec6",
       "metadata": {
         "id": "5064760f-ec00-4cae-b4cd-566d48df5ec6"
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 3,
       "id": "1194849a",
       "metadata": {},
       "outputs": [],
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -404,7 +404,7 @@
               "'0'"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -416,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -424,11 +424,7 @@
           "output_type": "stream",
           "text": [
             "Some weights of PegasusForConditionalGeneration were not initialized from the model checkpoint at tuner007/pegasus_paraphrase and are newly initialized: ['model.decoder.embed_positions.weight', 'model.encoder.embed_positions.weight']\n",
-            "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-            "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-            "To disable this warning, you can either:\n",
-            "\t- Avoid using `tokenizers` before the fork if possible\n",
-            "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+            "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
           ]
         },
         {
@@ -445,8 +441,7 @@
       ],
       "source": [
         "# Example use\n",
-        "\n",
-        "APIKEY = \"[KEY]\"\n",
+        "APIKEY = os.getenv(\"OPENAI_API_KEY\")\n",
         "MODEL = 'gpt-3.5-turbo'\n",
         "llm = LLMWrapper(model = MODEL, apikey=APIKEY)\n",
         "\n",
@@ -471,7 +466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "5e58c173",
       "metadata": {},
       "outputs": [
@@ -587,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "id": "ee886b77",
       "metadata": {},
       "outputs": [
@@ -866,7 +861,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "4b8d29a5-15a4-4b7d-a767-73a79b8d053f",
       "metadata": {
         "id": "4b8d29a5-15a4-4b7d-a767-73a79b8d053f"
