--- a/notebooks/manisfestos class.ipynb
+++ b/notebooks/manisfestos class.ipynb
@@ -7,8 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cjbarrie/promptstability/blob/elli/notebooks/manisfestos%20class.ipynb" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+              "<a href=\"https://colab.research.google.com/github/cjbarrie/promptstability/blob/main/notebooks/manisfestos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
     },
     {
       "cell_type": "markdown",
