--- a/data/output/original_prompts.tex
+++ b/data/output/original_prompts.tex
@@ -3,7 +3,7 @@
 % Format: Dataset 	 Prompt
 tweets_rd_within.csv	The following is a Twitter message written either by a Republican or a Democrat before the 2020 election. Your task is to guess whether the author is Republican or Democrat. [Respond 0 for Democrat, or 1 for Republican. Guess if you do not know. Respond nothing else.]
 tweets_pop_within.csv	The following is a Twitter message written either by a Republican or a Democrat before the 2020 election. Your task is to label whether or not it contains populist language. [Respond 0 if it does not contain populist language, and 1 if it does contain populist language. Guess if you do not know. Respond nothing else.]
-news_within.csv	The text provided is some newspaper text. Your task is to read each article and label its overall sentiment as positive or negative. Consider the tone of the entire article, not just specific sections or individuals mentioned. [Respond 0 for negative, or 1 for positive. Respond nothing else.]
+news_within.csv	The text provided is some newspaper text. Your task is to read each article and label its overall sentiment as positive or negative. Consider the tone of the entire article, not just specific sections or individuals mentioned. [Respond 0 for negative, 1 for positive, and 2 for neutral. Respond nothing else.]
 manifestos_within.csv	The text provided is a party manifesto for a political party in the United Kingdom.     Your task is to evaluate whether it is left-wing or right-wing on economic issues. Respond with 0 for left-wing, or 1 for right-wing.     Respond nothing else.
 manifestos_multi_within.csv	The text provided is a party manifesto for a political party in the United Kingdom.     Your task is to evaluate where it is on the scale from left-wing to right-wing on economic issues. Respond with a number from 1 to 10. 1 corresponds to most left-wing. 10 corresponds to most right-wing.     Respond nothing else.
 \end{lstlisting}
