Add new scripts and update README + plots

--- a/data/output/original_prompts.tex
+++ b/data/output/original_prompts.tex
@@ -1,9 +1,16 @@
-\lstset{breaklines=true, breakatwhitespace=true}
+\lstset{breaklines=true, breakatwhitespace=true}[label=lst:originalprompts]
 \begin{lstlisting}
 % Format: Dataset 	 Prompt
 tweets_rd_within.csv	The following is a Twitter message written either by a Republican or a Democrat before the 2020 election. Your task is to guess whether the author is Republican or Democrat. [Respond 0 for Democrat, or 1 for Republican. Guess if you do not know. Respond nothing else.]
 tweets_pop_within.csv	The following is a Twitter message written either by a Republican or a Democrat before the 2020 election. Your task is to label whether or not it contains populist language. [Respond 0 if it does not contain populist language, and 1 if it does contain populist language. Guess if you do not know. Respond nothing else.]
 news_within.csv	The text provided is some newspaper text. Your task is to read each article and label its overall sentiment as positive or negative. Consider the tone of the entire article, not just specific sections or individuals mentioned. [Respond 0 for negative, 1 for positive, and 2 for neutral. Respond nothing else.]
+news_short_within.csv	The text provided is some newspaper text. Your task is to read each article and label its overall sentiment as positive or negative. Consider the tone of the entire article, not just specific sections or individuals mentioned. [Respond 0 for negative, 1 for positive, and 2 for neutral. Respond nothing else.]
 manifestos_within.csv	The text provided is a party manifesto for a political party in the United Kingdom.     Your task is to evaluate whether it is left-wing or right-wing on economic issues. Respond with 0 for left-wing, or 1 for right-wing.     Respond nothing else.
 manifestos_multi_within.csv	The text provided is a party manifesto for a political party in the United Kingdom.     Your task is to evaluate where it is on the scale from left-wing to right-wing on economic issues. Respond with a number from 1 to 10. 1 corresponds to most left-wing. 10 corresponds to most right-wing.     Respond nothing else.
+stance_long_within.csv	The text provided come from some tweets about Donald Trump. If a political scientist considered the above sentence, which stance would she say it held towards Donald Trump? [Respond 0 for negative, and 1 for positive. Respond nothing else.]
+stance_long_within.csv	The text provided come from some tweets about Donald Trump. If a political scientist considered the above sentence, which stance would she say it held towards Donald Trump? [Respond 0 for negative, 1 for positive, and 2 for none. Respond nothing else.]
+mii_within.csv	Here are some open-ended responses from a scientific study of voters to the question what is the most important issue facing the country?. Please assign one of the following categories to each open ended text response. [Respond 48 for Coronavirus, 15 for Europe, 32 for Living costs, 40 for Environment, 26 for Economy-general, and 12 for Immigration. Respond nothing else.]
+mii_long_within.csv	Here are some open-ended responses from a scientific study of voters to the question what is the most important issue facing the country?. Please assign one of the following categories to each open ended text response. [Respond 48 for Coronavirus, 15 for Europe, 32 for Living costs, 40 for Environment, 26 for Economy-general, 12 for Immigration, 4 for Pol-neg i.e., complaints about politics, 1 for Health, 31 for Inflation, 22 for War, 5 for Partisan-neg i.e., complaints about a party of politician, and 14 for Crime. Respond nothing else.]
+synth_within.csv	In the 2020 presidential election, Donald Trump is the Republican candidate, and Joe Biden is the Democratic candidate. The following is some information about an individual voter. I want you to tell me how you think they voted. [Respond 0 for Biden, or 1 for Trump. Guess if you do not know. Respond nothing else.]
+synth_short_within.csv	In the 2020 presidential election, Donald Trump is the Republican candidate, and Joe Biden is the Democratic candidate. The following is some information about an individual voter. I want you to tell me how you think they voted. [Respond 0 for Biden, or 1 for Trump. Guess if you do not know. Respond nothing else.]
 \end{lstlisting}
