Test bad prompt

--- a/data/output/prompt_variants.tex
+++ b/data/output/prompt_variants.tex
@@ -1,5 +1,5 @@
-\lstset{breaklines=true, breakatwhitespace=true}[label=lst:promptvariants]
-\begin{lstlisting}
+\lstset{breaklines=true, breakatwhitespace=true}
+\begin{lstlisting}[label=lst:promptvariants]
 % Format: Dataset \t Temperature \t Prompt
 stance_between.csv	0.1	The text provided come from some tweets about Donald Trump. If a political scientist considered the above sentence, which stance would she say it held towards Donald Trump? [Respond 0 for negative, and 1 for positive. Respond nothing else.]
 stance_between.csv	0.1	The text provided was from a Donald Trump account. [Respond 0 for negative, and 1 for positive. Respond nothing else.]
