Add expanded runs, ignore large data

--- a/data/output/original_prompts.tex
+++ b/data/output/original_prompts.tex
@@ -1,5 +1,5 @@
-\lstset{breaklines=true, breakatwhitespace=true}[label=lst:originalprompts]
-\begin{lstlisting}
+\lstset{breaklines=true, breakatwhitespace=true}
+\begin{lstlisting}[label=lst:originalprompts]
 % Format: Dataset 	 Prompt
 tweets_rd_within.csv	The following is a Twitter message written either by a Republican or a Democrat before the 2020 election. Your task is to guess whether the author is Republican or Democrat. [Respond 0 for Democrat, or 1 for Republican. Guess if you do not know. Respond nothing else.]
 tweets_pop_within.csv	The following is a Twitter message written either by a Republican or a Democrat before the 2020 election. Your task is to label whether or not it contains populist language. [Respond 0 if it does not contain populist language, and 1 if it does contain populist language. Guess if you do not know. Respond nothing else.]
